--- a/src/css/projects/projectsDesktop.css
+++ b/src/css/projects/projectsDesktop.css
@@ -1,2 +1,30 @@
 @media only screen and (min-width: 768px) {
+  .arrow:hover {
+    position: absolute;
+    transition: 0.5s ease-in-out;
+    animation: moveLeft 0.5s ease-in;
+  }
+}
+
+@keyframes moveLeft {
+  0% {
+    left: 0%;
+  }
+
+  20% {
+    left: 20%;
+  }
+
+  40% {
+    left: 40%;
+  }
+  60% {
+    left: 60%;
+  }
+  80% {
+    left: 80%;
+  }
+  100% {
+    left: 100%;
+  }
 }
