--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -1,12 +1,18 @@
+#projects::before {
+  background-color: #101820;
+  height: 50vh;
+}
+
 #projects {
   width: 100vw;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  /* overflow: auto;
+  overflow: auto;
   scrollbar-width: none;
-  -ms-overflow-style: none; 
-  scrollbar-width: none; */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  background-color: #101820;
+  height: 100vh;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -21,11 +27,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 5px;
+  justify-content: space-evenly;
+  min-height: 60vh;
+  max-height: 60vh;
+  background-color: #93b5b338;
 }
 
 .project-card-container img {
   width: 80vw;
-  border-radius: 5px;
+  border-radius: 15px;
+  padding: 0.5em;
 }
 
 .p-header-container,
@@ -33,19 +45,21 @@
 .built-with-container,
 .project-btns-container {
   width: 100%;
+  color: white;
+  padding: 0.5em;
 }
 
 .project-header {
   font-size: 2.5rem;
   font-weight: 400;
-  margin: 0.5em 0 0.5em 0;
+  margin: 0 0 0.5em 0;
 }
 
 .project-discription {
   overflow: hidden;
   font-size: 1.5rem;
   font-weight: 300;
-  margin: 0 0 0.5em 0;
+  /* margin: 0 0 1em 0; */
 }
 
 .built-with-txt {
@@ -56,16 +70,15 @@
 
 .project-btns-container {
   display: flex;
-  margin: 0 0 1em 0;
+  /* margin: 0 0 1em 0; */
 }
 
 .project-btn {
   padding: 0.5em 0 0.2em 0;
   /* border-radius: 5px; */
-  color: #101820;
+  color: #ffffff;
   font-size: 1.5rem;
   text-transform: uppercase;
-
   width: 60%;
   margin: 0 0 1em 0;
 }
