--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -1,8 +1,3 @@
-#projects::before {
-  background-color: #101820;
-  height: 50vh;
-}
-
 #projects {
   width: 100vw;
   display: flex;
@@ -11,8 +6,9 @@
   scrollbar-width: none;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  background-color: #101820;
+  background: linear-gradient(#93b5b3, #101820);
   height: 100vh;
+  border: none;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -30,7 +26,6 @@
   border-radius: 5px;
   justify-content: space-evenly;
   min-height: 60vh;
-  max-height: 60vh;
   background-color: #93b5b338;
 }
 
