--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -30,9 +30,10 @@
 }
 
 .project-card-container img {
-  width: 80vw;
+  width: 80%;
   border-radius: 15px;
   padding: 0.5em;
+  margin-top: 2em;
 }
 
 .p-header-container,
