--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   margin-top: 2em;
-  /* height: 60vh; */
+  height: 80vh;
   background: linear-gradient(#ffffff, #93b5b3);
 }
 
