--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -2,9 +2,17 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   margin-top: 2em;
   height: 80vh;
   background: linear-gradient(#ffffff, #93b5b3);
+}
+
+.hero-flex-container {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .navbar-name,
@@ -27,7 +35,7 @@
 .presentation-text-container {
   width: 100vw;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
 }
 
@@ -68,9 +76,7 @@
 .skill-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin-top: -1.5em;
-  width: 100vw;
   height: 100vh;
 }
 
