--- a/src/css/hero/heroDesktop.css
+++ b/src/css/hero/heroDesktop.css
@@ -39,12 +39,13 @@
     font-size: 2.2rem;
     margin-top: 1rem;
     min-height: 9vh;
+    width: 60%;
   }
 
   .arrow-card-container {
     order: 2;
     position: absolute;
-    right: 5%;
+    right: 10em;
 
     /* border: 1px solid red; */
   }
