--- a/src/css/hero/heroDesktop.css
+++ b/src/css/hero/heroDesktop.css
@@ -1,6 +1,7 @@
 @media only screen and (min-width: 768px) {
   .hero-container {
     margin-top: 7em;
+    top: 1em;
   }
 
   .hero-flex-container {
