--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -19,18 +19,24 @@
 .project-card-container {
   width: 80vw;
   margin: 0.5em;
-  border-bottom: 0.5px solid #101820;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
   justify-content: space-evenly;
   min-height: 60vh;
-  background-color: #93b5b338;
+  /* background-color: #93b5b338; */
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
 }
 
 .project-card-container img {
-  width: 80%;
   border-radius: 12.5px;
   padding: 0.5em;
   margin-top: 2em;
