--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -76,16 +76,24 @@
 
 .project-btn {
   padding: 0.5em 0 0.2em 0;
-
   color: #ffffff;
   font-size: 1.5rem;
   text-transform: uppercase;
-  width: 60%;
   margin: 0 0 1em 0;
 }
 
 .test-app-btn {
   border-bottom: 2px solid #93b5b3;
+  margin-right: 1em;
+}
+
+.test-app-btn {
+  border-bottom: 2px solid #93b5b3;
+  margin-right: 1em;
+}
+
+.to-project-link {
+  margin-left: 1em;
 }
 
 .see-code-btn {
