--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -24,9 +24,8 @@
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   min-height: 60vh;
-  /* background-color: #93b5b338; */
 }
 
 .content-container {
