--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -30,6 +30,7 @@
 .content-container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   width: 80%;
 }
