--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -23,7 +23,7 @@
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
-  justify-content: flex-end;
+  justify-content: space-between;
   min-height: 60vh;
 }
 
@@ -40,6 +40,11 @@
   padding: 0.5em;
   margin-top: 2em;
   width: 100%;
+}
+
+.p-discription-container {
+  min-height: 20%;
+  max-height: 20%;
 }
 
 .p-header-container,
