--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -5,7 +5,7 @@
   align-items: center;
   margin-top: 4em;
   height: 80vh;
-  background: linear-gradient(#ffffff, #93b5b3);
+  /* background: linear-gradient(#ffffff, #93b5b3); */
 }
 
 .hero-flex-container {
