--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -6,7 +6,7 @@
   scrollbar-width: none;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  /* background: linear-gradient(#93b5b3, #101820); */
+  background: linear-gradient(#93b5b3, #101820);
   height: 100vh;
   border: none;
 }
