--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -1,3 +1,7 @@
+.background-container {
+  background: linear-gradient(#93b5b3, #101820);
+}
+
 #projects {
   width: 100vw;
   display: flex;
@@ -6,7 +10,7 @@
   scrollbar-width: none;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  background: linear-gradient(#93b5b3, #101820);
+  /* background: linear-gradient(#93b5b3, #101820); */
   height: 100vh;
   border: none;
 }
