--- a/src/css/contact/contactMobile.css
+++ b/src/css/contact/contactMobile.css
@@ -1,3 +1,7 @@
+.background-container {
+  background: linear-gradient(#131a23, #000000);
+}
+
 .contact-main-container {
   overflow: auto;
   height: 100vh;
