--- a/src/css/contact/contactMobile.css
+++ b/src/css/contact/contactMobile.css
@@ -1,5 +1,6 @@
 .background-container {
-  background: linear-gradient(#101822, #000000);
+  /* background-color: linear-gradient(#101822, #000000); */
+  background-color: #000000;
 }
 
 .contact-main-container {
