--- a/src/css/contact/contactMobile.css
+++ b/src/css/contact/contactMobile.css
@@ -3,9 +3,7 @@
   background-color: #000000;
 }
 
-.contact-main-container {
-  overflow: auto;
-  height: 100vh;
-  border: none;
-  /* background: linear-gradient(#93b5b3, #101820); */
+.ontact-section {
+  display: flex;
+  justify-content: center;
 }
