--- a/src/css/contact/contactMobile.css
+++ b/src/css/contact/contactMobile.css
@@ -3,7 +3,12 @@
   background-color: #000000;
 }
 
-.ontact-section {
+.contact-section {
   display: flex;
   justify-content: center;
+}
+
+.contact-title {
+  font-size: 1.5rem;
+  color: #ffff;
 }
