--- a/src/css/contact/contactMobile.css
+++ b/src/css/contact/contactMobile.css
@@ -26,6 +26,12 @@
   justify-content: space-evenly;
 }
 
+.circle-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .icon-circle {
   width: 3.5em;
   height: 3.5em;
@@ -55,4 +61,12 @@
 }
 .icon-circle:nth-child(5) svg {
   font-size: 2em;
+}
+
+.circle-text {
+  color: #fff;
+  font-weight: 100;
+  text-transform: uppercase;
+  margin-top: 1em;
+  font-size: 1rem;
 }
