--- a/src/css/contact/contactMobile.css
+++ b/src/css/contact/contactMobile.css
@@ -6,10 +6,14 @@
 .contact-section {
   display: flex;
   justify-content: center;
+  width: 100vw;
 }
 
 .contact-container {
-  margin-top: 5em;
+  margin-top: 10em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .contact-title {
@@ -23,7 +27,7 @@
 
 .contact-icons-container {
   display: flex;
-  width: 100vw;
+  width: 100%;
   justify-content: space-evenly;
 }
 
