--- a/src/css/contact/contactMobile.css
+++ b/src/css/contact/contactMobile.css
@@ -37,6 +37,10 @@
   align-items: center;
 }
 
+.circle-container:hover {
+  cursor: pointer;
+}
+
 .icon-circle {
   width: 3.5em;
   height: 3.5em;
