--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -55,6 +55,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  filter: drop-shadow(12px 4px 9px rgba(0, 0, 0, 0.5));
 }
 
 .arrow-to-skills {
