--- a/src/css/footer/footerDesktop.css
+++ b/src/css/footer/footerDesktop.css
@@ -1,3 +1,13 @@
-.footer-main-container {
-  /* background: linear-gradient(#93b5b3, #101820); */
+@media only screen and (min-width: 768px) {
+  .footer-img {
+    width: 8em;
+  }
+
+  .text-ul {
+    font-size: 1.5rem;
+  }
+
+  .text-ul li {
+    margin: 15px;
+  }
 }
