--- a/src/css/footer/footerMobile.css
+++ b/src/css/footer/footerMobile.css
@@ -3,24 +3,30 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  height: 20vh;
+  height: 15vh;
+}
+
+.img-container {
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .footer-img {
   width: 4em;
-  position: absolute;
+
   left: 0;
-  top: 50%;
+  align-self: flex-end;
 }
 
 .text-ul {
   display: flex;
-  color: white;
-  margin-top: 50px;
   font-size: 1.2rem;
 }
 
 .text-ul li {
   margin: 5px;
   font-weight: 100;
+  list-style: none;
+  color: white;
 }
