--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -55,7 +55,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  filter: drop-shadow(12px 4px 9px rgba(0, 0, 0, 0.2));
+  /* filter: drop-shadow(12px 4px 9px rgba(0, 0, 0, 0.2)); */
 }
 
 .arrow-to-skills {
@@ -83,6 +83,7 @@
   width: 4em;
   text-align: center;
   border-radius: 5px;
+  box-shadow: 12px 4px 9px rgba(0, 0, 0, 0.2);
 }
 
 .skills:hover {
