--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -136,6 +136,7 @@
   z-index: -1;
   transition: 0.5s ease-in-out;
   animation: mymove 0.5s ease-in;
+  filter: drop-shadow(0);
 }
 
 @keyframes mymove {
