--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -91,6 +91,7 @@
   padding: 0.5em 0 0.2em 0;
   color: #ffffff;
   font-size: 1.5rem;
+  font-weight: 100;
   text-transform: uppercase;
   margin: 0 0 1em 0;
 }
