--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -85,6 +85,7 @@
 
 .project-btns-container {
   display: flex;
+  align-items: flex-end;
 }
 
 .project-btn {
@@ -96,18 +97,7 @@
   margin: 0 0 1em 0;
 }
 
-.test-app-btn {
-  border-bottom: 2px solid #93b5b3;
-  margin-right: 1em;
-}
-
-.test-app-btn {
-  border-bottom: 2px solid #93b5b3;
-  margin-right: 1em;
-}
-
 .see-code-btn {
   background-color: transparent;
-  border-bottom: 1px solid #101820;
   margin-left: 1em;
 }
