--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -303,6 +303,7 @@
   flex-direction: column;
   align-items: center;
   margin: 1em 0 0 0;
+  z-index: 1;
 }
 
 .hero-btn-container {
@@ -310,6 +311,23 @@
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #121820;
+  z-index: 1;
+}
+
+.to-project-link:hover > div > svg {
+  color: #93b5b3;
+  transform: scale(1.1);
+  transition: 0.2s ease-in-out;
+}
+.to-aboutme-link:hover > div > svg {
+  color: #93b5b3;
+  transform: scale(1.1);
+  transition: 0.2s ease-in-out;
+}
+
+.hero-btn-container:hover {
+  border-bottom: none;
+  transition: 0.2s ease-in-out;
 }
 
 .to-about {
