--- a/src/css/general/App.css
+++ b/src/css/general/App.css
@@ -34,6 +34,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  cursor: pointer;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-size: 1.6rem;
