--- a/src/css/contact/contactDesktop.css
+++ b/src/css/contact/contactDesktop.css
@@ -6,4 +6,9 @@
   .contact-title {
     font-size: 5rem;
   }
+
+  .circle-container:hover > .icon-circle {
+    box-shadow: 2px 2px 30px #93b5b3;
+    transition: 0.2s ease-in-out;
+  }
 }
