--- a/src/css/contact/contactMobile.css
+++ b/src/css/contact/contactMobile.css
@@ -1,6 +1,7 @@
 .background-container {
   /* background-color: linear-gradient(#101822, #000000); */
   background-color: #121820;
+  height: 100vh;
 }
 
 .contact-section {
