--- a/src/css/contact/contactMobile.css
+++ b/src/css/contact/contactMobile.css
@@ -39,6 +39,28 @@
   display: flex;
   width: 100%;
   justify-content: space-evenly;
+  min-height: 15vh;
+  max-height: 15vh;
+}
+
+.phone-container {
+  display: flex;
+  flex-direction: column;
+  align-items: self-end;
+  color: white;
+  border: 0.5px solid;
+  border-radius: 5px;
+  padding: 4rem;
+  position: relative;
+  border: 1px solid #000000;
+  box-shadow: 1px 1px 150px 1px #93b5b3;
+  justify-content: center;
+}
+
+.phone-container > svg {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 .circle-container {
