--- a/src/css/contact/contactMobile.css
+++ b/src/css/contact/contactMobile.css
@@ -4,7 +4,7 @@
   height: 80vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .contact-section {
@@ -42,12 +42,11 @@
   flex-direction: column;
   align-items: self-end;
   color: white;
-  border: 0.5px solid;
   border-radius: 5px;
   padding: 4rem;
   position: relative;
-  border: 1px solid #000000;
-  box-shadow: 1px 1px 150px 1px #93b5b3;
+  /* border: 1px solid #000000; */
+  /* box-shadow: 1px 1px 150px 1px #93b5b3; */
   justify-content: center;
 }
 
@@ -55,6 +54,15 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  box-shadow: 1px 1px 150px 1px #93b5b3;
+}
+
+.phonenumber {
+  box-shadow: 1px 1px 150px 1px #93b5b3;
+  background-color: #93b5b324;
+  border: 0.1px solid;
+  border-radius: 10px;
+  padding: 15px;
 }
 
 .circle-container {
