--- a/src/css/about/aboutMobile.css
+++ b/src/css/about/aboutMobile.css
@@ -1,3 +1,19 @@
+.about-img-circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 1px solid #93b5b3;
+  position: relative;
+  margin-bottom: 30px;
+}
+.me {
+  width: 5.5em;
+  overflow: hidden;
+  border-radius: 50%;
+  bottom: 0;
+  left: 0.2em;
+  position: absolute;
+}
 .item {
   background-color: #121820;
   margin-bottom: 15px;
