--- a/src/css/about/aboutMobile.css
+++ b/src/css/about/aboutMobile.css
@@ -1,5 +1,11 @@
+.aboutme-header-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
 .about-img-circle {
-  width: 100px;
+  width: 250px;
   height: 100px;
   border-radius: 50%;
   border: 1px solid #121820;
@@ -14,6 +20,11 @@
   bottom: 0;
   left: 0.2em;
   position: absolute;
+}
+
+.aboutme-header {
+  margin-left: 20px;
+  font-weight: 100;
 }
 
 .img-txt {
