--- a/src/css/about/aboutMobile.css
+++ b/src/css/about/aboutMobile.css
@@ -1,16 +1,17 @@
 .aboutme-header-container {
   width: 100%;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .about-img-circle {
-  width: 250px;
-  height: 100px;
+  width: 7em;
+  height: 7em;
   border-radius: 50%;
   border: 1px solid #121820;
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   background-color: #93b5b3;
 }
 .me {
@@ -23,8 +24,8 @@
 }
 
 .aboutme-header {
-  margin-left: 20px;
   font-weight: 100;
+  margin-bottom: 20px;
 }
 
 .img-txt {
