--- a/src/css/about/aboutDesktop.css
+++ b/src/css/about/aboutDesktop.css
@@ -1,7 +1,10 @@
-@media only screen and (min-width: 820px) {
+@media only screen and (min-width: 768px) {
+  .questions-wrapper {
+    flex-direction: row !important;
+    flex-wrap: wrap;
+  }
   .item {
     margin-right: 25px;
-    max-width: 40%;
-    min-width: 40%;
+    max-width: 45%;
   }
 }
