--- a/src/css/navbar/navbarMobile.css
+++ b/src/css/navbar/navbarMobile.css
@@ -152,6 +152,9 @@
   display: flex;
   justify-content: flex-end;
   margin: 0 5em 0 0;
+  position: absolute;
+  right: 0;
+  bottom: 32%;
 }
 .some-con img:first-child {
   margin-right: 2em;
