--- a/src/css/navbar/navbarMobile.css
+++ b/src/css/navbar/navbarMobile.css
@@ -154,7 +154,7 @@
   margin: 0 5em 0 0;
   position: absolute;
   right: 0;
-  bottom: 32%;
+  bottom: 235px;
 }
 .some-con img:first-child {
   margin-right: 2em;
