--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -57,7 +57,8 @@
 .project-header {
   font-size: 2.5rem;
   font-weight: 400;
-  margin: 0 0 0.5em 0;
+  min-height: 3em;
+  max-height: 3em;
 }
 
 .project-discription {
