--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -5,8 +5,8 @@
   align-items: center;
   margin-top: 4em;
   background: linear-gradient(#ffffff, #93b5b3);
-  min-height: 90vh;
-  max-height: 90vh;
+  /* min-height: 90vh;
+  max-height: 90vh; */
 }
 
 .hero-flex-container {
