--- a/src/css/hero/heroDesktop.css
+++ b/src/css/hero/heroDesktop.css
@@ -64,9 +64,9 @@
 
   .navbts-hero-container {
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     margin-top: 6em;
-    align-items: flex-start;
+    margin-bottom: 6em;
   }
 
   .to-aboutme-link {
