--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -337,7 +337,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 1em 0 0 0;
+  margin: 1rem 0 6rem 0;
   z-index: 1;
   width: 100%;
 }
