--- a/src/css/hero/heroDesktop.css
+++ b/src/css/hero/heroDesktop.css
@@ -65,8 +65,8 @@
   .navbts-hero-container {
     flex-direction: row;
     justify-content: flex-start;
-    margin-top: 6em;
-    margin-bottom: 6em;
+    margin-top: 6rem;
+    margin-bottom: 6rem;
   }
 
   .to-aboutme-link {
