--- a/src/css/hero/heroDesktop.css
+++ b/src/css/hero/heroDesktop.css
@@ -70,6 +70,7 @@
   }
 
   .navbts-hero-container-resume {
+    display: flex;
     flex-direction: row;
     justify-content: center;
     margin-top: 6em;
