--- a/src/css/hero/heroDesktop.css
+++ b/src/css/hero/heroDesktop.css
@@ -126,7 +126,7 @@
   }
 
   .hero-btn-container:hover {
-    border-bottom: none;
+    /* border-bottom: none; */
     transition: 0.2s ease-in-out;
   }
 
