--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -346,7 +346,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #121820;
+  border: 1px solid #121820;
+  border-radius: 5px;
   z-index: 1;
 }
 
