--- a/src/css/navbar/navbarDesktop.css
+++ b/src/css/navbar/navbarDesktop.css
@@ -27,7 +27,7 @@
 
   .switchLang-btn-noshow {
     display: block;
-    border: 1px solid #93b5b3;
+    border: 1px solid #121820;
     border-radius: 5px;
     background-color: transparent;
     color: #121820;
