--- a/src/css/hero/heroDesktop.css
+++ b/src/css/hero/heroDesktop.css
@@ -126,7 +126,10 @@
   }
 
   .hero-btn-container:hover {
-    /* border-bottom: none; */
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+    background-color: #121820;
+    color: #93b5b3;
     transition: 0.2s ease-in-out;
   }
 
