--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -39,7 +39,7 @@
   border-radius: 12.5px;
   padding: 0.5em;
   width: 100%;
-  box-shadow: 1px 1§px 50px #93b5b3;
+  box-shadow: 1px 1px 50px #93b5b3;
 }
 
 .p-discription-container {
