--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -39,7 +39,8 @@
   border-radius: 12.5px;
   padding: 0.5em;
   width: 100%;
-  box-shadow: 1px 1px 50px #93b5b3;
+
+  filter: drop-shadow(2px 4px 6px black);
 }
 
 .p-discription-container {
