--- a/src/css/hero/heroDesktop.css
+++ b/src/css/hero/heroDesktop.css
@@ -110,7 +110,7 @@
   }
 
   .to-project-link:hover > div > svg {
-    color: #93b5b3;
+    color: #121820;
     transform: scale(1.1);
     transition: 0.2s ease-in-out;
   }
@@ -125,11 +125,19 @@
     cursor: pointer;
   }
 
-  .hero-btn-container:hover {
-    cursor: pointer;
+  .to-about:hover {
     background-color: #121820;
     color: #93b5b3;
     transition: 0.2s ease-in-out;
+  }
+  .to-projects:hover {
+    background-color: #93b5b3;
+    color: #121820;
+    transition: 0.2s ease-in-out;
+  }
+
+  .hero-btn-container:hover {
+    cursor: pointer;
   }
 
   .hero-link {
