--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -35,7 +35,7 @@
   flex-direction: column;
 }
 
-.presentation-text-container:first-child() {
+.presentation-text-container:first-child {
   color: white;
 }
 
