--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -45,6 +45,10 @@
   margin-top: 2rem;
 }
 
+.presentation-text > span {
+  color: white;
+}
+
 .swith-card {
   color: #121820;
   font-weight: 300;
