--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -5,8 +5,7 @@
   align-items: center;
   padding-top: 4em;
   background-color: #055b56;
-  /* min-height: 90vh;
-  max-height: 90vh; */
+  height: 100vh;
 }
 
 .hero-flex-container {
