--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding-top: 4em;
   background-color: #055b56;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .hero-flex-container {
