--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -38,11 +38,11 @@
   font-weight: 100;
   font-size: 1.5rem;
   margin-top: 2rem;
-  color: #121820;
+  color: white;
 }
 
 .swith-card {
-  color: white;
+  color: #055b56;
   font-weight: 300;
 }
 
