--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -64,6 +64,7 @@
   flex-direction: column;
   align-items: center;
   filter: drop-shadow(12px 4px 9px rgba(0, 0, 0, 0.2));
+  padding-bottom: 5em;
 }
 
 .arrow-to-skills {
@@ -80,6 +81,8 @@
   flex-direction: column;
   margin-top: -2.5em;
   height: 100vh;
+  align-self: center;
+  padding-top: 2em;
 }
 
 .card-container {
