--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -53,7 +53,7 @@
 }
 
 .arrow-container {
-  margin-top: 2.5em;
+  /* margin-top: 2.5em; */
   display: flex;
   justify-content: center;
   width: 100%;
