--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -353,7 +353,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid #121820;
+  border: 1px solid #ffffff;
   border-radius: 5px;
   padding: 5px;
   z-index: 1;
@@ -361,12 +361,12 @@
 
 .to-about {
   margin: 0 0 0 0;
-  background-color: #93b5b314;
+  /* background-color: #93b5b314; */
 }
 
 .to-projects {
   margin: 1em 0 0 0;
-  background-color: #93b5b3;
+  /* background-color: #93b5b3; */
 }
 
 .arrow {
@@ -374,7 +374,7 @@
 }
 
 .hero-link {
-  color: #121820;
+  color: #ffffff;
   text-transform: uppercase;
   width: 15em;
 }
