--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -369,6 +369,10 @@
   /* background-color: #93b5b3; */
 }
 
+.to-project-link {
+  filter: drop-shadow(0rem 0rem 1rem #78fff1);
+}
+
 .arrow {
   font-size: 2em;
 }
