--- a/src/css/footer/footerDesktop.css
+++ b/src/css/footer/footerDesktop.css
@@ -14,6 +14,7 @@
   .text-ul > a:hover {
     text-decoration: underline;
     transition: 0.2s ease-in-out;
+    filter: drop-shadow(0.1rem 0.1rem 1rem #78fff1);
     text-decoration-color: white;
     text-underline-offset: 0.5rem;
   }
