--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -349,11 +349,24 @@
   width: 100%;
 }
 
+.navbts-hero-container
+  > .hero-btn-container:first-child
+  > .hero-btn-container
+  > svg {
+  transform: rotate(90deg);
+}
+.navbts-hero-container
+  > .hero-btn-container:nth-child(2)
+  > .hero-btn-container
+  > svg {
+  transform: rotate(-90deg);
+}
+
 .hero-btn-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  border: 1px solid #ffffff;
+  /* justify-content: space-between;
+  border: 1px solid #ffffff; */
   border-radius: 5px;
   padding: 5px;
   z-index: 1;
@@ -370,7 +383,8 @@
 }
 
 .arrow {
-  font-size: 2em;
+  font-size: 1.5em;
+  order: -1;
 }
 
 .hero-link {
