--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -349,19 +349,6 @@
   width: 100%;
 }
 
-.navbts-hero-container
-  > .hero-btn-container:first-child
-  > .hero-btn-container
-  > svg {
-  transform: rotate(90deg);
-}
-.navbts-hero-container
-  > .hero-btn-container:nth-child(2)
-  > .hero-btn-container
-  > svg {
-  transform: rotate(-90deg);
-}
-
 .hero-btn-container {
   display: flex;
   align-items: center;
@@ -385,6 +372,13 @@
 .arrow {
   font-size: 1.5em;
   order: -1;
+}
+
+.arrow-up {
+  transform: rotate(90deg);
+}
+.arrow-down {
+  transform: rotate(-90deg);
 }
 
 .hero-link {
