--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -342,11 +342,12 @@
 
 .navbts-hero-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 1rem 0 6rem 0;
-  z-index: 1;
-  width: 100%;
+  /* flex-direction: column; */
+  align-items: flex-end;
+  /* margin: 1rem 0 6rem 0; */
+  /* z-index: 1; */
+  width: 100vw;
+  justify-content: center;
 }
 
 .hero-btn-container {
@@ -354,7 +355,7 @@
   align-items: center;
   /* justify-content: space-between;
   border: 1px solid #ffffff; */
-  border-radius: 5px;
+  /* border-radius: 5px; */
   padding: 5px;
   z-index: 1;
 }
@@ -362,11 +363,15 @@
 .to-about {
   margin: 0 0 0 0;
   /* background-color: #93b5b314; */
+  display: flex;
+  justify-content: center;
 }
 
 .to-projects {
   margin: 1em 0 0 0;
   /* background-color: #93b5b3; */
+  display: flex;
+  justify-content: center;
 }
 
 .arrow {
@@ -384,7 +389,7 @@
 .hero-link {
   color: #ffffff;
   text-transform: uppercase;
-  width: 15em;
+  width: 10em;
 }
 
 .desktop {
