--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -346,7 +346,7 @@
   align-items: flex-end;
   /* margin: 1rem 0 6rem 0; */
   /* z-index: 1; */
-  width: 100vw;
+  /* width: 100vw; */
   justify-content: center;
 }
 
