--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -346,7 +346,7 @@
   align-items: flex-end;
   /* margin: 1rem 0 6rem 0; */
   /* z-index: 1; */
-  /* width: 100vw; */
+  width: 100%;
   justify-content: center;
 }
 
@@ -360,12 +360,12 @@
   z-index: 1;
 }
 
-.to-about {
+/* .to-about {
   margin: 0 0 0 0;
-  /* background-color: #93b5b314; */
+  background-color: #93b5b314;
   display: flex;
   justify-content: center;
-}
+} */
 
 .to-projects {
   margin: 1em 0 0 0;
@@ -389,7 +389,6 @@
 .hero-link {
   color: #ffffff;
   text-transform: uppercase;
-  width: 10em;
 }
 
 .desktop {
