--- a/src/css/resume/resumeMobile.css
+++ b/src/css/resume/resumeMobile.css
@@ -1,9 +1,10 @@
 .resume-container {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  background: linear-gradient(white, #93b5b3);
-  margin-top: 50px;
+  padding-top: 50px;
+  background-color: #055b56;
+  min-height: 100vh;
 }
 
 .resume {
