--- a/src/css/resume/resumeMobile.css
+++ b/src/css/resume/resumeMobile.css
@@ -2,7 +2,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  padding-top: 50px;
+  padding-top: 20%;
   background-color: #055b56;
   min-height: 100vh;
   padding-bottom: 50%;
