--- a/src/css/resume/resumeDesktop.css
+++ b/src/css/resume/resumeDesktop.css
@@ -1,4 +1,8 @@
 @media only screen and (min-width: 768px) {
+  .resume-container {
+    padding-top: 20%;
+    padding-bottom: 20%;
+  }
   .resume {
     width: 60vw;
   }
