--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -15,6 +15,21 @@
   display: none;
 }
 
+.projectHeader {
+  color: white;
+  text-transform: uppercase;
+  font-size: 3rem;
+  filter: drop-shadow(10rem 10rem 10rem #78fff1);
+  position: absolute;
+  left: 15%;
+  top: 10%;
+  color: #affff7;
+  background-color: #93b5b32e;
+  box-shadow: 1px 1px 150px 1px #93b5b3;
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+
 .project-card-container {
   width: 80%;
   margin: 0.5em;
