--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -24,7 +24,8 @@
   top: 10%;
   color: #affff7;
   background-color: #93b5b32e;
-  box-shadow: 1px 1px 150px 1px #93b5b3;
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
+    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
   padding: 10px 20px;
   border-radius: 10px;
   transform: translate(-50%);
