--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -22,8 +22,8 @@
   left: 50%;
   top: 10%;
   color: #affff7;
-  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #055b56,
-    0 0 82px #055b56, 0 0 92px #055b56, 0 0 102px #055b56, 0 0 151px #055b56;
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
+    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
   padding: 10px 20px;
   border-radius: 10px;
   transform: translate(-50%);
