--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -9,6 +9,7 @@
   background-color: #121820;
   position: relative;
   border: none;
+  padding-top: 200px;
 }
 
 #projects::-webkit-scrollbar {
@@ -16,16 +17,17 @@
 }
 
 .projectHeader {
-  text-transform: uppercase;
-  font-size: 3rem;
-  position: absolute;
-  left: 50%;
-  top: 10%;
-  color: #affff7;
-  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
-    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
-  padding: 10px 20px;
   border-radius: 10px;
+  color: #affff7;
+  font-size: 8rem;
+  left: 50%;
+  padding: 10px 20px;
+  position: absolute;
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
+    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 152px #0fa;
+  text-transform: uppercase;
+  top: 15%;
+  -webkit-transform: translate(-50%);
   transform: translate(-50%);
 }
 
