--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -19,12 +19,12 @@
 .projectHeader {
   border-radius: 10px;
   color: #affff7;
-  font-size: 8rem;
+  font-size: 6rem;
   left: 50%;
   padding: 10px 20px;
   position: absolute;
-  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
-    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 152px #0fa;
+  text-shadow: 0 10px, white, 0 20px, #affff7 0 50px, #affff7 0 70px,
+    #affff7 0 90px, #affff7 0 120px;
   text-transform: uppercase;
   top: 15%;
   -webkit-transform: translate(-50%);
