--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -23,8 +23,7 @@
   left: 50%;
   padding: 10px 20px;
   position: absolute;
-  text-shadow: 0 10px, white, 0 20px, #affff7 0 50px, #affff7 0 70px,
-    #affff7 0 90px, #affff7 0 120px;
+  text-shadow: 30px 30px 100px, #affff7;
   text-transform: uppercase;
   top: 15%;
   -webkit-transform: translate(-50%);
