--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -23,7 +23,7 @@
   left: 50%;
   padding: 10px 20px;
   position: absolute;
-  text-shadow: 30px 30px 100px, #affff7;
+  text-shadow: 30px 30px 100px;
   text-transform: uppercase;
   top: 15%;
   -webkit-transform: translate(-50%);
