--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -43,7 +43,7 @@
   border-radius: 5px;
   justify-content: space-between;
   min-height: 60vh;
-  margin-top: 200px;
+  margin: 40px 0.5em 0.5em;
 }
 
 .content-container {
