--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -2,10 +2,6 @@
   width: 100vw;
   display: flex;
   align-items: flex-start;
-  overflow: auto;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
   background-color: #121820;
   position: relative;
   border: none;
@@ -32,6 +28,16 @@
   border-top: 1px solid;
   border-right: 1px solid;
   box-shadow: 10px 5px 1px black;
+}
+
+.scroll {
+  overflow: auto;
+  width: 100vw;
+  display: flex;
+  align-items: flex-start;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .project-card-container {
