--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -12,7 +12,7 @@
 }
 
 .projectHeader {
-  border-radius: 5px;
+  border-radius: 0 5px 5px 0;
   color: #affff7;
   font-size: 4rem;
   padding: 10px 20px;
