--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -6,7 +6,7 @@
   padding-top: 4em;
   background-color: #055b56;
   min-height: 100vh;
-  padding-bottom: 50%;
+  padding-bottom: 100px;
 }
 
 .hero-flex-container {
