--- a/src/css/hero/heroMobile.css
+++ b/src/css/hero/heroMobile.css
@@ -7,6 +7,15 @@
   background-color: #055b56;
   min-height: 100vh;
   padding-bottom: 50%;
+  position: relative;
+}
+
+.ball1 {
+  height: 100px;
+  width: 300px;
+  border-radius: 33%;
+  background-color: #055b56;
+  position: absolute;
 }
 
 .hero-flex-container {
