--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -20,12 +20,28 @@
   padding: 10px 20px;
   text-shadow: 30px 30px 100px, 0 0 20px;
   text-transform: uppercase;
+  box-shadow: -2px 5px 1px black;
+  display: flex;
+  align-items: center;
+}
+.left {
   border-bottom: 1px solid;
   border-top: 1px solid;
   border-right: 1px solid;
-  box-shadow: -2px 5px 1px black;
+  border-radius: 0 5px 5px 0;
 }
 
+.right {
+  border-bottom: 1px solid;
+  border-top: 1px solid;
+  border-left: 1px solid;
+  border-radius: 5px 0 0 5px;
+}
+
+.github-logo-project {
+  width: 0.8em;
+  margin-left: 10px;
+}
 .scroll::-webkit-scrollbar {
   display: none;
 }
