--- a/src/css/about/aboutMobile.css
+++ b/src/css/about/aboutMobile.css
@@ -91,14 +91,16 @@
   max-height: 0;
   overflow: hidden;
   transition: all 0s cubic-bezier(0, 1, 0, 1);
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   font-weight: 100;
   margin-top: 10px;
+  line-height: 17px;
 }
 
 .content.show {
   height: auto;
   max-height: 9999px;
   transition: all 0s cubic-bezier(0, 1, 0, 1);
-  font-size: 1.3rem;
+  font-size: 1.5rem;
+  line-height: 17px;
 }
