--- a/src/css/navbar/navbarMobile.css
+++ b/src/css/navbar/navbarMobile.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 0.5px solid #121820;
+  border: 0.5px solid #ffffff;
   position: absolute;
   left: 1em;
   margin: 1.5em;
